[package]
name = "crypto"
version = "0.1.0"
authors = ["virgesmith <andrew@friarswood.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.26"
pem = "*"
hex = "^0.4.0"
base64 = "^0.11.0"
lazy_static = "*"