[package]
name = "pycrypto"
version = "0.1.0"
authors = ["virgesmith <andrew@friarswood.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pycrypto"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.8.5", features = ["extension-module"] }
hex = "*"
crypto = { path = "../crypto" }