[package]
name = "neon-module"
version = "0.1.0"
authors = ["virgesmith <andrew@friarswood.net>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon_module"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
num_cpus = "1.4.0"
neon-serde = "0.3.0"
serde_derive = "1.0.104"
serde = "1.0.104"
num-bigint = "*"
num-traits = "*"